--- a/otras-etiquetas-de-bloque/blockquote.htm
+++ b/otras-etiquetas-de-bloque/blockquote.htm
@@ -19,6 +19,12 @@
                   nesciunt veritatis harum, dicta id!  
                  Labore modi libero incidunt consectetur vitae ex, expedita eveniet amet.</i></b>
             &lt;/blockquote&gt;
+            <p>Aprende sobre el mundo de las startup</p>
+            <blockquote cite="https://platzi.com/blog/aprende-sobre-el-mundo-de-las-startups/">
+                Y Combinator (o YC para quienes la conocen) es una de las aceleradoras de startups más importante del mundo. De su
+                programa han salido más de 2,000 compañías como Stripe, Airbnb, Platzi, Rappi, Twitch, entre otras. El valor combinado
+                de estas compañías superan los $300 mil millones de dólares y sigue subiendo.
+            </blockquote>
         </pre>
     </dl>
 </body>
