--- a/Formularios/select-basico.htm
+++ b/Formularios/select-basico.htm
@@ -11,7 +11,7 @@
         <h1>Elementos seleccionables</h1>
     </header>
     <form>
-        <select name="lenguagues">
+        <select name="lenguagues" multiple>
             <option value="html">HTML</option>
             <option value="css">CSS</option>
             <option value="javascript">JavaScript</option>
